JumpScript/tests/baselines/reference/parserFunctionDeclaration4.errors.txt
tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration4.jump(2,10): error TS2389: Function implementation name must be 'foo'.


==== tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration4.jump (1 errors) ====
    function foo();
    function bar() { }
             ~~~
!!! error TS2389: Function implementation name must be 'foo'.